--- a/source/assets/index.html
+++ b/source/assets/index.html
@@ -6,14 +6,14 @@
     <title>Proximity</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="xml/svg" href="eye-fill.svg">
   </head>
   <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
   <div class="container">
     <a class="navbar-brand nav-link" href="#">
-      <img class="bi me-2" width="40" height="40" role="img" style="filter: invert(75%);" src="favicon.png">
+      <img class="bi me-2" width="40" height="40" role="img" style="filter: invert(75%);" src="eye-fill.svg">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
