massive refactoring, working toward a reliable web service

--- a/source/assets/index.html
+++ b/source/assets/index.html
@@ -136,6 +136,7 @@
         <div>asdf</div>
       </div>
 
+        <button type="button" class="btn btn-primary proximity-restart">Restart</button>
 
     </div>
   </div>
@@ -737,6 +738,7 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <script src="main.js"></script>
+
 </body>
 </html>
 
